--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,5 +2,66 @@
 .home-container {
 display: -webkit-flex;
 -webkit-flex-direction: column;
+}
+/*$assertive :#ef473a;
+
+$assertive :#ef473a;
+.button-float{
+  background: $assertive;
+  color:white;
+  z-index: 12;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+
+}
+
+.button-float:hover{
+  -webkit-transform: translate3d(0, -1px, 0)  !important;
+  transform: translate3d(0, -1px, 0) !important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4) !important;
+    background: darken($assertive, 10%) !important;
+}*/
+
+.float-button {
+
+background-color:#303f9f;
+opacity: 0.9;
+color: white;
+border-radius: 50%;
+/*border-radius:15% 0 0 0;*/
+width: 30px;
+padding: 25px;
+font-size: 40px;
+position: fixed;
+bottom: 5%; /* Adjust height */
+right: 5%; /* Adjust position */
+z-index: 1000;
+}
+
+.float-button .height_fix {
+  margin-top: 100%;
+  border: 1px solid red;
+}
+
+.float-button .content {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  margin-top: -20px;
+  color: white;
+}
+
+.gallery-item {
+  border-style: groove;
+  border-width: thin;
+  border-color: gray;
+  border-radius: 4px;
+  width = 45%;
+  margin: 5px;
+
 
 }
