--- a/www/css/style.css
+++ b/www/css/style.css
@@ -62,6 +62,16 @@ z-index: 1000;
   border-radius: 4px;
   width = 45%;
   margin: 5px;
+}
 
 
+
+ul.rating li {
+  display: inline;
+  border: 0px;
+  background: none;
+  padding: 5px 10px;
+}
+ul.rating li i {
+  font-size: 30px;
 }
