--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -4,8 +4,8 @@
     <ion-nav-view name="home-tab"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
-    <ion-nav-view name="about-tab"></ion-nav-view>
+  <ion-tab title="Add" icon="ion-plus-round" href="#/tab/add">
+    <ion-nav-view name="add-tab"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Contact" icon="ion-ios-world" ui-sref="tabs.contact">
